refactor: TravelScheduleResponse 변환 책임 이동, 국가 이름도 반환